--- a/web_app/templates/hello.html
+++ b/web_app/templates/hello.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap_layout.html" %}
+{% extends "layout.html" %}
 
 
 {% block content %}
@@ -6,5 +6,7 @@
     <h1>{{ message }}</h1>
 
     <p>This is a paragraph on the "hello" page.</p>
+
+    <p>{{ other }}</p>
 
 {% endblock %}
